--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "seed:demographics": "node src/data/seed.js"
+    "seed:demographics": "node src/data/seed.js",
+    "start": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
