--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
+    "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.4.0"
